Stick to java 17 language level